RESOLVED FIXED127542
Fix crash when opening the inspector
https://bugs.webkit.org/show_bug.cgi?id=127542
Summary Fix crash when opening the inspector
Anders Carlsson
Reported 2014-01-23 21:26:10 PST
Crash when opening the inspector
Attachments
Patch (1.53 KB, patch)
2014-01-23 21:28 PST, Anders Carlsson
joepeck: review+
Anders Carlsson
Comment 1 2014-01-23 21:28:28 PST
Joseph Pecoraro
Comment 2 2014-01-23 21:29:00 PST
Comment on attachment 222075 [details] Patch r=me!
Anders Carlsson
Comment 3 2014-01-23 21:38:50 PST
Note You need to log in before you can comment on or make changes to this bug.