Fix crash when opening the inspector https://bugs.webkit.org/show_bug.cgi?id=127542 <rdar://problem/15899544>

Reviewed by Joseph Pecoraro.

Create default clients so we won't crash if they're never set.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy):

Canonical link: https://commits.webkit.org/145559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162689 268f45cc-cd09-0410-ab3c-d52691b4dbfc